cms-core/query/src/main/java/com/ebay/cloud/cms/query/parser/antlr/CMSQueryParser.java
/*
Copyright [2013-2014] eBay Software Foundation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// $ANTLR 3.4 /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g 2013-11-08 10:03:38

/* 
Copyright 2012 eBay Software Foundation 

Licensed under the Apache License, Version 2.0 (the "License"); 
you may not use this file except in compliance with the License. 
You may obtain a copy of the License at 

    http://www.apache.org/licenses/LICENSE-2.0 

Unless required by applicable law or agreed to in writing, software 
distributed under the License is distributed on an "AS IS" BASIS, 
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
See the License for the specific language governing permissions and 
limitations under the License. 
*/ 

package com.ebay.cloud.cms.query.parser.antlr;


import org.antlr.runtime.BaseRecognizer;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.DFA;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;


/**
* Grammer file for CMS Query Language
*
*    @author xjiang
*
**/
@SuppressWarnings({"all", "warnings", "unchecked"})
public class CMSQueryParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AGGREGATION", "AGGR_ATTR", "AND", "AT", "AVG", "BOOLEAN", "BOOL_VAL", "COMMA", "COUNT", "DATE", "DATE_VAL", "DECIMAL", "DEC_VAL", "DOLLAR", "EQ", "ESC", "EXISTS", "FILTER", "GE", "GROUP", "GT", "ID", "IN", "INNER_JOIN", "INTEGER", "INTERSECTION", "INT_VAL", "ISEMPTY", "ISNULL", "LBRACE", "LBRACKET", "LE", "LEFT_JOIN", "LPARENT", "LT", "MAX", "MIN", "NE", "NOT", "OR", "PROJECTION", "QUERY", "QUERY_NODE", "RBRACE", "RBRACKET", "REGEX", "REG_INSENSITIVE", "REG_SENSITIVE", "REG_VAL", "REVERSE", "RIGHT_JOIN", "RPARENT", "SRCH_ATTR", "STAR", "STRING", "STR_VAL", "SUBQUERY", "SUM", "TYPE_LIST", "UNION", "VALUE_LIST", "WS"
    };

    public static final int EOF=-1;
    public static final int AGGREGATION=4;
    public static final int AGGR_ATTR=5;
    public static final int AND=6;
    public static final int AT=7;
    public static final int AVG=8;
    public static final int BOOLEAN=9;
    public static final int BOOL_VAL=10;
    public static final int COMMA=11;
    public static final int COUNT=12;
    public static final int DATE=13;
    public static final int DATE_VAL=14;
    public static final int DECIMAL=15;
    public static final int DEC_VAL=16;
    public static final int DOLLAR=17;
    public static final int EQ=18;
    public static final int ESC=19;
    public static final int EXISTS=20;
    public static final int FILTER=21;
    public static final int GE=22;
    public static final int GROUP=23;
    public static final int GT=24;
    public static final int ID=25;
    public static final int IN=26;
    public static final int INNER_JOIN=27;
    public static final int INTEGER=28;
    public static final int INTERSECTION=29;
    public static final int INT_VAL=30;
    public static final int ISEMPTY=31;
    public static final int ISNULL=32;
    public static final int LBRACE=33;
    public static final int LBRACKET=34;
    public static final int LE=35;
    public static final int LEFT_JOIN=36;
    public static final int LPARENT=37;
    public static final int LT=38;
    public static final int MAX=39;
    public static final int MIN=40;
    public static final int NE=41;
    public static final int NOT=42;
    public static final int OR=43;
    public static final int PROJECTION=44;
    public static final int QUERY=45;
    public static final int QUERY_NODE=46;
    public static final int RBRACE=47;
    public static final int RBRACKET=48;
    public static final int REGEX=49;
    public static final int REG_INSENSITIVE=50;
    public static final int REG_SENSITIVE=51;
    public static final int REG_VAL=52;
    public static final int REVERSE=53;
    public static final int RIGHT_JOIN=54;
    public static final int RPARENT=55;
    public static final int SRCH_ATTR=56;
    public static final int STAR=57;
    public static final int STRING=58;
    public static final int STR_VAL=59;
    public static final int SUBQUERY=60;
    public static final int SUM=61;
    public static final int TYPE_LIST=62;
    public static final int UNION=63;
    public static final int VALUE_LIST=64;
    public static final int WS=65;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public CMSQueryParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public CMSQueryParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return CMSQueryParser.tokenNames; }
    public String getGrammarFileName() { return "/ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g"; }


    public static class start_rule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start_rule"
    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:90:1: start_rule : query ;
    public final CMSQueryParser.start_rule_return start_rule() throws RecognitionException {
        CMSQueryParser.start_rule_return retval = new CMSQueryParser.start_rule_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        CMSQueryParser.query_return query1 =null;



        try {
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:90:11: ( query )
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:90:13: query
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_query_in_start_rule908);
            query1=query();

            state._fsp--;

            adaptor.addChild(root_0, query1.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

            catch (RecognitionException e)
            {
                throw e;
            }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "start_rule"


    public static class query_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "query"
    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:92:1: query : path -> ^( QUERY path ) ;
    public final CMSQueryParser.query_return query() throws RecognitionException {
        CMSQueryParser.query_return retval = new CMSQueryParser.query_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        CMSQueryParser.path_return path2 =null;


        RewriteRuleSubtreeStream stream_path=new RewriteRuleSubtreeStream(adaptor,"rule path");
        try {
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:93:5: ( path -> ^( QUERY path ) )
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:93:9: path
            {
            pushFollow(FOLLOW_path_in_query925);
            path2=path();

            state._fsp--;

            stream_path.add(path2.getTree());

            // AST REWRITE
            // elements: path
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 93:14: -> ^( QUERY path )
            {
                // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:93:17: ^( QUERY path )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(QUERY, "QUERY")
                , root_1);

                adaptor.addChild(root_1, stream_path.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

            catch (RecognitionException e)
            {
                throw e;
            }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "query"


    public static class path_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "path"
    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:97:1: path : unionPath ;
    public final CMSQueryParser.path_return path() throws RecognitionException {
        CMSQueryParser.path_return retval = new CMSQueryParser.path_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        CMSQueryParser.unionPath_return unionPath3 =null;



        try {
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:98:5: ( unionPath )
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:98:9: unionPath
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_unionPath_in_path955);
            unionPath3=unionPath();

            state._fsp--;

            adaptor.addChild(root_0, unionPath3.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

            catch (RecognitionException e)
            {
                throw e;
            }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "path"


    public static class unionPath_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "unionPath"
    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:101:1: unionPath : intersectionPath ( UNION ^ intersectionPath )* ;
    public final CMSQueryParser.unionPath_return unionPath() throws RecognitionException {
        CMSQueryParser.unionPath_return retval = new CMSQueryParser.unionPath_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token UNION5=null;
        CMSQueryParser.intersectionPath_return intersectionPath4 =null;

        CMSQueryParser.intersectionPath_return intersectionPath6 =null;


        Object UNION5_tree=null;

        try {
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:102:5: ( intersectionPath ( UNION ^ intersectionPath )* )
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:102:9: intersectionPath ( UNION ^ intersectionPath )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_intersectionPath_in_unionPath975);
            intersectionPath4=intersectionPath();

            state._fsp--;

            adaptor.addChild(root_0, intersectionPath4.getTree());

            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:102:26: ( UNION ^ intersectionPath )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==UNION) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:102:27: UNION ^ intersectionPath
            	    {
            	    UNION5=(Token)match(input,UNION,FOLLOW_UNION_in_unionPath978); 
            	    UNION5_tree = 
            	    (Object)adaptor.create(UNION5)
            	    ;
            	    root_0 = (Object)adaptor.becomeRoot(UNION5_tree, root_0);


            	    pushFollow(FOLLOW_intersectionPath_in_unionPath981);
            	    intersectionPath6=intersectionPath();

            	    state._fsp--;

            	    adaptor.addChild(root_0, intersectionPath6.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

            catch (RecognitionException e)
            {
                throw e;
            }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "unionPath"


    public static class intersectionPath_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "intersectionPath"
    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:105:1: intersectionPath : primaryPath ( INTERSECTION ^ primaryPath )* ;
    public final CMSQueryParser.intersectionPath_return intersectionPath() throws RecognitionException {
        CMSQueryParser.intersectionPath_return retval = new CMSQueryParser.intersectionPath_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token INTERSECTION8=null;
        CMSQueryParser.primaryPath_return primaryPath7 =null;

        CMSQueryParser.primaryPath_return primaryPath9 =null;


        Object INTERSECTION8_tree=null;

        try {
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:106:5: ( primaryPath ( INTERSECTION ^ primaryPath )* )
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:106:9: primaryPath ( INTERSECTION ^ primaryPath )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_primaryPath_in_intersectionPath1003);
            primaryPath7=primaryPath();

            state._fsp--;

            adaptor.addChild(root_0, primaryPath7.getTree());

            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:106:21: ( INTERSECTION ^ primaryPath )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==INTERSECTION) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:106:22: INTERSECTION ^ primaryPath
            	    {
            	    INTERSECTION8=(Token)match(input,INTERSECTION,FOLLOW_INTERSECTION_in_intersectionPath1006); 
            	    INTERSECTION8_tree = 
            	    (Object)adaptor.create(INTERSECTION8)
            	    ;
            	    root_0 = (Object)adaptor.becomeRoot(INTERSECTION8_tree, root_0);


            	    pushFollow(FOLLOW_primaryPath_in_intersectionPath1009);
            	    primaryPath9=primaryPath();

            	    state._fsp--;

            	    adaptor.addChild(root_0, primaryPath9.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

            catch (RecognitionException e)
            {
                throw e;
            }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "intersectionPath"


    public static class primaryPath_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "primaryPath"
    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:109:1: primaryPath : ( LPARENT ! path RPARENT !| queryNode ( options {greedy=true; } : ( INNER_JOIN | LEFT_JOIN | RIGHT_JOIN ) ^ primaryPath )* );
    public final CMSQueryParser.primaryPath_return primaryPath() throws RecognitionException {
        CMSQueryParser.primaryPath_return retval = new CMSQueryParser.primaryPath_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token LPARENT10=null;
        Token RPARENT12=null;
        Token set14=null;
        CMSQueryParser.path_return path11 =null;

        CMSQueryParser.queryNode_return queryNode13 =null;

        CMSQueryParser.primaryPath_return primaryPath15 =null;


        Object LPARENT10_tree=null;
        Object RPARENT12_tree=null;
        Object set14_tree=null;

        try {
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:110:5: ( LPARENT ! path RPARENT !| queryNode ( options {greedy=true; } : ( INNER_JOIN | LEFT_JOIN | RIGHT_JOIN ) ^ primaryPath )* )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==LPARENT) ) {
                alt4=1;
            }
            else if ( (LA4_0==ID||LA4_0==LT) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:110:9: LPARENT ! path RPARENT !
                    {
                    root_0 = (Object)adaptor.nil();


                    LPARENT10=(Token)match(input,LPARENT,FOLLOW_LPARENT_in_primaryPath1034); 

                    pushFollow(FOLLOW_path_in_primaryPath1037);
                    path11=path();

                    state._fsp--;

                    adaptor.addChild(root_0, path11.getTree());

                    RPARENT12=(Token)match(input,RPARENT,FOLLOW_RPARENT_in_primaryPath1039); 

                    }
                    break;
                case 2 :
                    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:111:9: queryNode ( options {greedy=true; } : ( INNER_JOIN | LEFT_JOIN | RIGHT_JOIN ) ^ primaryPath )*
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_queryNode_in_primaryPath1050);
                    queryNode13=queryNode();

                    state._fsp--;

                    adaptor.addChild(root_0, queryNode13.getTree());

                    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:111:19: ( options {greedy=true; } : ( INNER_JOIN | LEFT_JOIN | RIGHT_JOIN ) ^ primaryPath )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==INNER_JOIN||LA3_0==LEFT_JOIN||LA3_0==RIGHT_JOIN) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:111:43: ( INNER_JOIN | LEFT_JOIN | RIGHT_JOIN ) ^ primaryPath
                    	    {
                    	    set14=(Token)input.LT(1);

                    	    set14=(Token)input.LT(1);

                    	    if ( input.LA(1)==INNER_JOIN||input.LA(1)==LEFT_JOIN||input.LA(1)==RIGHT_JOIN ) {
                    	        input.consume();
                    	        root_0 = (Object)adaptor.becomeRoot(
                    	        (Object)adaptor.create(set14)
                    	        , root_0);
                    	        state.errorRecovery=false;
                    	    }
                    	    else {
                    	        MismatchedSetException mse = new MismatchedSetException(null,input);
                    	        throw mse;
                    	    }


                    	    pushFollow(FOLLOW_primaryPath_in_primaryPath1070);
                    	    primaryPath15=primaryPath();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, primaryPath15.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

            catch (RecognitionException e)
            {
                throw e;
            }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "primaryPath"


    public static class queryNode_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "queryNode"
    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:115:1: queryNode : ( typeCast )? nodeName ( filter )? ( aggregation )? ( projection )? -> ^( QUERY_NODE ( typeCast )? nodeName ( filter )? ( aggregation )? ( projection )? ) ;
    public final CMSQueryParser.queryNode_return queryNode() throws RecognitionException {
        CMSQueryParser.queryNode_return retval = new CMSQueryParser.queryNode_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        CMSQueryParser.typeCast_return typeCast16 =null;

        CMSQueryParser.nodeName_return nodeName17 =null;

        CMSQueryParser.filter_return filter18 =null;

        CMSQueryParser.aggregation_return aggregation19 =null;

        CMSQueryParser.projection_return projection20 =null;


        RewriteRuleSubtreeStream stream_aggregation=new RewriteRuleSubtreeStream(adaptor,"rule aggregation");
        RewriteRuleSubtreeStream stream_projection=new RewriteRuleSubtreeStream(adaptor,"rule projection");
        RewriteRuleSubtreeStream stream_nodeName=new RewriteRuleSubtreeStream(adaptor,"rule nodeName");
        RewriteRuleSubtreeStream stream_typeCast=new RewriteRuleSubtreeStream(adaptor,"rule typeCast");
        RewriteRuleSubtreeStream stream_filter=new RewriteRuleSubtreeStream(adaptor,"rule filter");
        try {
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:116:5: ( ( typeCast )? nodeName ( filter )? ( aggregation )? ( projection )? -> ^( QUERY_NODE ( typeCast )? nodeName ( filter )? ( aggregation )? ( projection )? ) )
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:116:9: ( typeCast )? nodeName ( filter )? ( aggregation )? ( projection )?
            {
            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:116:9: ( typeCast )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==LT) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:116:10: typeCast
                    {
                    pushFollow(FOLLOW_typeCast_in_queryNode1097);
                    typeCast16=typeCast();

                    state._fsp--;

                    stream_typeCast.add(typeCast16.getTree());

                    }
                    break;

            }


            pushFollow(FOLLOW_nodeName_in_queryNode1101);
            nodeName17=nodeName();

            state._fsp--;

            stream_nodeName.add(nodeName17.getTree());

            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:116:30: ( filter )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==LBRACKET) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:116:31: filter
                    {
                    pushFollow(FOLLOW_filter_in_queryNode1104);
                    filter18=filter();

                    state._fsp--;

                    stream_filter.add(filter18.getTree());

                    }
                    break;

            }


            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:116:40: ( aggregation )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==LT) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:116:41: aggregation
                    {
                    pushFollow(FOLLOW_aggregation_in_queryNode1109);
                    aggregation19=aggregation();

                    state._fsp--;

                    stream_aggregation.add(aggregation19.getTree());

                    }
                    break;

            }


            // /ebay/repositories/cms.open/cms-core/query/src/main/antlr3/com/ebay/cloud/cms/query/parser/antlr/CMSQuery.g:116:55: ( projection )?
            int alt8=2;
            int LA8_0 = input.LA(1);
